# docs/generated/openapi.json
@@ -1006,7 +1006,6 @@
           "session_id",
           "request_id",
           "option_id",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -1165,7 +1164,6 @@
         "type": "object",
         "required": [
           "targets",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -1184,7 +1182,6 @@
         "type": "object",
         "required": [
           "targets",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2295,7 +2292,6 @@
         "required": [
           "id",
           "node_ids",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2320,7 +2316,6 @@
         "type": "object",
         "required": [
           "id",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2338,6 +2333,9 @@
           "plugin_id"
         ],
         "properties": {
+          "artifact_path": {
+            "type": "string"
+          },
           "notify": {
             "type": "boolean"
           },
@@ -2370,7 +2368,6 @@
         "type": "object",
         "required": [
           "plugin_id",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2443,7 +2440,6 @@
         "type": "object",
         "required": [
           "plugin_id",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2468,7 +2464,6 @@
         "type": "object",
         "required": [
           "plugin_id",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2493,10 +2488,12 @@
         "type": "object",
         "required": [
           "plugin_id",
-          "confirm",
           "confirm"
         ],
         "properties": {
+          "artifact_path": {
+            "type": "string"
+          },
           "confirm": {
             "type": "boolean"
           },
@@ -2522,6 +2519,9 @@
           "plugin_id"
         ],
         "properties": {
+          "artifact_path": {
+            "type": "string"
+          },
           "plugin_id": {
             "type": "string"
           }
@@ -2542,7 +2542,6 @@
         "type": "object",
         "required": [
           "name",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2666,7 +2665,6 @@
         "type": "object",
         "required": [
           "gateway_name",
-          "confirm",
           "confirm"
         ],
         "properties": {
@@ -2718,7 +2716,6 @@
           "components",
           "node_ids",
           "scope",
-          "confirm",
           "confirm"
         ],
         "properties": {
